app/assets/stylesheets/chat/buddy_list.scss
.buddy-list {
  @include windows-95-pane;

  width: 260px;
  height: 600px;

  display: flex;
  flex-flow: column;

  position: fixed;
}

.buddy-list-content {
  flex: 1;

  padding: 5px;

  display: flex;
  flex-flow: column;
}

.button-row {
  display: flex;
  flex-flow: row;
  justify-content: space-between;

  button {
    font-size: 13px;
  }
}

.channel-index {
  flex: 1;

  div {
    height: 50%;

    display: flex;
    flex-flow: column;

    label {
      font-size: 15px;
      font-weight: bold;
      margin-left: 4px;
    }

    ul {
      flex: 1;

      padding: 5px 8px;
      margin-bottom: 5px;

      @include text-input;

      font-size: 14px;
      font-weight: bold;

      overflow: scroll;

      li {
        cursor: pointer;

        &:hover {
          background-color: $square-title-logo-yellow;
        }
      }
    }
  }
}

.square-title-logo-small {
  padding: 5px;
  margin-bottom: $content-spacing;

  display: flex;
  flex-flow: row;
  align-items: center;

  color: $square-title-logo-white;
  background-color: $square-title-logo-blue;

  img {
    margin: 5px;
    margin-left: 30px;
    width: 100px;
    height: auto;
  }

  h2 {
    font-size: 14px;
  }
}

